sale input, clickable link and picks
cart page promocode input, script for counting and checking sale, clickable items, page for each wine-item

--- a/cart.html
+++ b/cart.html
@@ -59,6 +59,11 @@
                 </div>
                 <button class="order-button ">Оформить заказ</button>
                 <button onclick="location.href='collection.html'" class="back-button ">Вернуться к покупкам</button>
+                <h4 class="promocode-title">Есть промокод?</h4>
+                <p class="promocode-article">Введите промокод для получения<br>скидки</p>
+                <input type="text" name="promocode" id="promocode" placeholder="Пример: GFBD2331">
+                <br>
+                <button class="use-promo-button">Применить</button>
             </div>
         </div>
     </div>
