--- a/collection.html
+++ b/collection.html
@@ -36,9 +36,9 @@
     <div class="catalog-section">
         <div class="container">
             <div class="bottle-item">
-                <a href="wine-card.html"><img src="img/col_first.png"></a>
+                <a href="wine-card-napavalleycabernetsauvignon.html"><img src="img/col_first.png"></a>
                 <p class="bottle-year">2018</p>
-                <a class="title-link" href="wine-card.html">
+                <a class="title-link" href="wine-card-napavalleycabernetsauvignon.html">
                     <h3 class="bottle-title">Napa Valley <br>Cabernet Sauvignon</h3>
                 </a>
                 <p class="bottle-type">Сухое</p>
@@ -57,9 +57,9 @@
                 <button class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
-                <a href="wine-card.html"><img src="img/col_second.png"></a>
+                <a href="wine-card-sonomacoastsyrahredcar.html"><img src="img/col_second.png"></a>
                 <p class="bottle-year">2018</p>
-                <a class="title-link" href="wine-card.html">
+                <a class="title-link" href="wine-card-sonomacoastsyrahredcar.html">
                     <h3 class="bottle-title">Sonoma Coast Syrah<br>Red Car</h3>
                 </a>
                 <p class="bottle-type">Сухое</p>
@@ -78,9 +78,9 @@
                 <button class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
-                <a href="wine-card.html"><img src="img/col_third.png"></a>
+                <a href="wine-card-oakvillenapacabernetfranc.html"><img src="img/col_third.png"></a>
                 <p class="bottle-year">2018</p>
-                <a class="title-link" href="wine-card.html">
+                <a class="title-link" href="wine-card-oakvillenapacabernetfranc.html">
                     <h3 class="bottle-title">Oakville Napa <br>Cabernet Franc</h3>
                 </a>
                 <p class="bottle-type">Сухое</p>
@@ -99,9 +99,9 @@
                 <button class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
-                <a href="wine-card.html"><img src="img/col_forth.png"></a>
+                <a href="wine-card-cahealdsburgrameyclaret.html"><img src="img/col_forth.png"></a>
                 <p class="bottle-year">2017</p>
-                <a class="title-link" href="wine-card.html">
+                <a class="title-link" href="wine-card-cahealdsburgrameyclaret.html">
                     <h3 class="bottle-title">CA HealdsBurg<br>Ramey Claret</h3>
                 </a>
                 <p class="bottle-type">Сухое</p>
@@ -120,73 +120,71 @@
                 <button class="to-cart-btn">В корзину</button>
             </div>
             <div class="bottle-item">
-                <a href="wine-card.html"><img src="img/col_fifth.png"></a>
-                <p class="bottle-year">2014</p>
-                <a class="title-link" href="wine-card.html">
-                    <h3 class="bottle-title">Sonoma Coast<br>Pinot Noir</h3>
+                <a href="wine-card-sonomacoastrameypinotnoir.html"><img src="img/col_fifth.png "></a>
+                <p class="bottle-year ">2014</p>
+                <a class="title-link " href="wine-card-sonomacoastrameypinotnoir.html">
+                    <h3 class="bottle-title ">Sonoma Coast<br>Pinot Noir</h3>
                 </a>
-                <p class="bottle-type">Сухое</p>
-                <div class="info clearfix">
-                    <div class="about-left-part">
-                        <p class="bottle-color">Цвет</p>
-                        <p class="bottle-alc">Спирт</p>
-                        <p class="bottle-value">Объем</p>
+                <p class="bottle-type ">Сухое</p>
+                <div class="info clearfix ">
+                    <div class="about-left-part ">
+                        <p class="bottle-color ">Цвет</p>
+                        <p class="bottle-alc ">Спирт</p>
+                        <p class="bottle-value ">Объем</p>
                     </div>
-                    <div class="about-right-part">
-                        <p class="color-right">Белое</p>
-                        <p class="alc-right">10,2&nbsp;-&nbsp;12,5</p>
-                        <p class="value-right">750 мл.</p>
+                    <div class="about-right-part ">
+                        <p class="color-right ">Белое</p>
+                        <p class="alc-right ">10,2&nbsp;-&nbsp;12,5</p>
+                        <p class="value-right ">750 мл.</p>
                     </div>
                 </div>
-                <button class="to-cart-btn">В корзину</button>
+                <button class="to-cart-btn ">В корзину</button>
             </div>
-            <div class="bottle-item">
-                <a href="wine-card.html"><img src="img/col_sixth.png"></a>
-                <p class="bottle-year">2019</p>
-                <a class="title-link" href="wine-card.html">
-                    <h3 class="bottle-title">Old Coach Road <br>Sauvignon Blanc</h3>
+            <div class="bottle-item ">
+                <a href="wine-card-oldcoachroadsauvignonblanc.html"><img src="img/col_sixth.png "></a>
+                <p class="bottle-year ">2019</p>
+                <a class="title-link " href="wine-card-oldcoachroadsauvignonblanc.html">
+                    <h3 class="bottle-title ">Old Coach Road <br>Sauvignon Blanc</h3>
                 </a>
-                <p class="bottle-type">Сухое</p>
-                <div class="info clearfix">
-                    <div class="about-left-part">
-                        <p class="bottle-color">Цвет</p>
-                        <p class="bottle-alc">Спирт</p>
-                        <p class="bottle-value">Объем</p>
+                <p class="bottle-type ">Сухое</p>
+                <div class="info clearfix ">
+                    <div class="about-left-part ">
+                        <p class="bottle-color ">Цвет</p>
+                        <p class="bottle-alc ">Спирт</p>
+                        <p class="bottle-value ">Объем</p>
                     </div>
-                    <div class="about-right-part">
-                        <p class="color-right">Красное</p>
-                        <p class="alc-right">10,2&nbsp;-&nbsp;12,5</p>
-                        <p class="value-right">750 мл.</p>
+                    <div class="about-right-part ">
+                        <p class="color-right ">Красное</p>
+                        <p class="alc-right ">10,2&nbsp;-&nbsp;12,5</p>
+                        <p class="value-right ">750 мл.</p>
                     </div>
                 </div>
-                <button class="to-cart-btn">В корзину</button>
+                <button class="to-cart-btn ">В корзину</button>
             </div>
 
         </div>
     </div>
 
-
-
     <div class="footer-section ">
         <div class="container ">
             <ul class="footer-nav ">
                 <li>
-                    <a href="index.html">Главная</a>
+                    <a href="index.html ">Главная</a>
                 </li>
                 <li>
-                    <a href="collection.html">Каталог</a>
+                    <a href="collection.html ">Каталог</a>
                 </li>
                 <li>
                     <a href="# ">Поставщики</a>
                 </li>
                 <li>
-                    <a href="collection.html">Коллекции</a>
+                    <a href="collection.html ">Коллекции</a>
                 </li>
                 <li>
-                    <a href="index.html">Дегустация</a>
+                    <a href="index.html ">Дегустация</a>
                 </li>
                 <li>
-                    <a href="collection.html">Коллекция 2022</a>
+                    <a href="collection.html ">Коллекция 2022</a>
                 </li>
                 <li>
                     <a href="contacts.html ">Контакты</a>
@@ -219,8 +217,8 @@
         </div>
     </div>
     </div>
-    <script src="js/jquery.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/jquery.js "></script>
+    <script src="js/script.js "></script>
 </body>
 
 </html>
