--- a/wine-card-oakvillenapacabernetfranc.html
+++ b/wine-card-oakvillenapacabernetfranc.html
@@ -4,10 +4,10 @@
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat:300,400, 500,600,700&amp;lang=en" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Playfair+Display:300,400, 500,600,700&amp;lang=en" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Cabernet Sauvignon</title>
+    <title>Cabernet Franc</title>
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/style_card.css">
+    <link rel="stylesheet" href="../css/style_card.css">
     <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous">
     </script>
     <link rel="icon" href="img/favicon.ico">
@@ -34,16 +34,16 @@
     <div class="item-section">
         <div class="container">
             <div class="item-img">
-                <img src="img/pic-big.png">
+                <img src="../img/pic-big-cabernetfranc.png">
             </div>
             <div class=" item-description ">
                 <p class="item-year">2018</p>
-                <h3 class="item-title">Napa Valley <br> Cabernet Sauvignon Белое <br> Вино</h3>
+                <h3 class="item-title">Oakville Napa<br>Cabernet Franc Белое <br> Вино</h3>
                 <p class="item-collection">Коллекция «Урожай Марселя», Тихие вина, Сухое</p>
-                <p class="item-about"> Сдержанность вкуса и аромата, цвет этого вина удовлетворит <br> ожидания любого ценителя белого вина. Ужин с рыбными <br>блюдами идеально дополнит Cabernet Sauvignon. Благородное<br> сухое белое вино из южного региона Марселя.</p>
-                <p class="item-price"><span class="price">1335</span>
+                <p class="item-about"> Сдержанность вкуса и аромата, цвет этого вина удовлетворит <br> ожидания любого ценителя белого вина. Ужин с рыбными <br>блюдами идеально дополнит Cabernet Franc. Благородное<br> сухое белое вино из южного региона Марселя.</p>
+                <p class="item-price"><span class="price">3945</span>
                     <span class="price-value">руб.</span> - средняя розничная цена</p>
-                <button onclick="incrementValue()" class="to-cart-btn">В корзину</button>
+                <button class="to-cart-btn cabernet-franc">В корзину</button>
                 <div class="info clearfix">
                     <div class="about-left-part">
                         <p class="bottle-color">Цвет</p>
@@ -65,47 +65,47 @@
         <div class="contain">
             <div id="owl-carousel" class="owl-carousel owl-theme">
                 <div class="item">
-                    <a class="item-link" href="wine-card.html">
+                    <a class="item-link" href="wine-card-napavalleycabernetsauvignon.html">
                         <img src="img/first.png" style="width: 90px; height: 300px;">
                         <h3>Вино Napa Valley Cabernet <br>Sauvignon</h3>
                     </a>
-                    <p>3490 р.</p>
+                    <p>1335 р.</p>
                 </div>
                 <div class="item">
-                    <a class="item-link" href="wine-card.html">
+                    <a class="item-link" href="wine-card-sonomacoastsyrahredcar.html">
                         <img src="img/second.png" style="width: 106px; height: 300px;">
                         <h3>Вино Sonoma Coast Syrah <br>Red Car</h3>
                     </a>
-                    <p>3490 р.</p>
+                    <p>4177 р.</p>
                 </div>
                 <div class="item">
-                    <a class="item-link" href="wine-card.html">
+                    <a class="item-link" href="wine-card-oakvillenapacabernetfranc.html">
                         <img src="img/third.png" style="width: 90px; height: 306px;">
                         <h3>Вино Oakville Napa Cabernet<br> Franc</h3>
                     </a>
-                    <p>3490 р.</p>
+                    <p>3945 р.</p>
                 </div>
                 <div class="item">
-                    <a class="item-link" href="wine-card.html">
-                        <img src="img/first.png" style="width: 90px; height: 300px;">
-                        <h3>Вино Napa Valley Cabernet <br>Sauvignon
+                    <a class="item-link" href="wine-card-cahealdsburgrameyclaret.html">
+                        <img src="img/forth.png" style="width: 86px; height: 300px;">
+                        <h3>Вино CA HealdsBurg Ramey <br>Claret
                     </a>
                     </h3>
-                    <p>3490 р.</p>
+                    <p>1335 р.</p>
                 </div>
                 <div class="item">
-                    <a class="item-link" href="wine-card.html">
-                        <img src="img/second.png" style="width: 106px; height: 300px;">
-                        <h3>Вино Sonoma Coast Syrah <br>Red Car</h3>
+                    <a class="item-link" href="wine-card-sonomacoastrameypinotnoir.html">
+                        <img src="img/fifth.png" style="width: 90px; height: 300px;">
+                        <h3>Вино Sonoma Coast Ramey Pinot Noir</h3>
                     </a>
-                    <p>3490 р.</p>
+                    <p>2540 р.</p>
                 </div>
                 <div class="item">
-                    <a class="item-link" href="wine-card.html">
-                        <img src="img/third.png" style="width: 90px; height: 300px;">
-                        <h3>Вино Oakville Napa Cabernet<br> Franc</h3>
+                    <a class="item-link" href="wine-card-oldcoachroadsauvignonblanc.html">
+                        <img src="img/sixth.png" style="width: 100px; height: 300px;">
+                        <h3>Вино Old Coach Road Sauvignon Blanc</h3>
                     </a>
-                    <p>3490 р.</p>
+                    <p>2299 р.</p>
                 </div>
             </div>
         </div>
