--- a/wine-card-oakvillenapacabernetfranc.html
+++ b/wine-card-oakvillenapacabernetfranc.html
@@ -7,7 +7,7 @@
     <title>Cabernet Franc</title>
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../css/style_card.css">
+    <link rel="stylesheet" href="css/style_card.css">
     <script src="https://kit.fontawesome.com/457a315592.js" crossorigin="anonymous">
     </script>
     <link rel="icon" href="img/favicon.ico">
@@ -34,7 +34,7 @@
     <div class="item-section">
         <div class="container">
             <div class="item-img">
-                <img src="../img/pic-big-cabernetfranc.png">
+                <img src="img/pic-big-cabernetfranc.png">
             </div>
             <div class=" item-description ">
                 <p class="item-year">2018</p>
